--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
         <!--快捷重新部署项目-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
