--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,7 @@ server:
       charset: UTF-8
       force: true
       enabled: true
+
 spring:
   application:
     #应用的名称，可选
@@ -15,6 +16,11 @@ spring:
       url: jdbc:mysql://localhost:3306/reggie?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
       username: root
       password: wodehao323
+  redis:
+    host: 121.41.103.195
+    port: 6379
+    password: sunjiawei323
+    database: 0
 
 mybatis-plus:
   configuration:
